[package]
name = "lazy_scoped"
description = "Super-simple scoped single-threaded lazily-initialised objects"
homepage = "https://github.com/jFransham/lazy-scoped"
repository = "https://github.com/jFransham/lazy-scoped"
license = "Unlicense"
license-file = "LICENSE.md"
version = "0.1.0"
authors = ["Jack Fransham <jack.fransham@cuvva.co>"]
